# puzzle

./: .gitignore  .gitmodules  .ruff.toml  .rustfmt.toml  flake.nix  treefmt.nix
codingame/: Cargo.toml
codingame/bot/: Cargo.toml  Code4Life.cpp  Fall_Challenge_2022.rs  Fall_Challenge_2023.rs  Game_of_Drones.py  Game_of_Drones.rs  Mad_Pod_Racing.py  Spring_Challenge_2023.rs  Summer_Challenge_2024.rs  Summer_Challenge_2025.rs  hypersonic.rs  winter-challenge-2026-exotec.rs
codingame/bot/Fall_Challenge_2023/: Cargo.toml
codingame/bot/Fall_Challenge_2023/src/: activation.rs  answer.rs  layer.rs  lib.rs  matrix.rs  network.rs
codingame/bot/spring-challenge-2026-troll-farm/: Cargo.toml  idea-goal.md  main.rs
codingame/bot/winter-challenge-2026-exotec/: Cargo.toml  bfs.rs  mcts_ucb.rs
codingame/code_golf/: Don't Panic - Episode 1.py  Power_of_Thor.c  Power_of_Thor.cpp  Temperature.c  Temperature.cpp  Temperature.py  The_Descent.py  The_Descent.rs  The_Descent.sh  Unary.py
codingame/optimize/: .2048_seeds.in  2048.rs  2048_import.py  2048_queue.rs  2048_search.rs  CGFunge_Prime.groovy  Cargo.toml  Code_of_the_Rings.rs  Mars_Lander.py  Number_Shifting.rs  Spring_Challenge_2025.rs  Traveling_Salesman.cpp  Travelling_Salesman(greedy).py  Travelling_Salesman.rs  cgfunge-prime.groovy  code-of-the-rings.rs  number-shifting.rs
codingame/optimize/2048/: .2048_results.out  Cargo.toml  import_to_python.py  import_to_rust.py  score.py
codingame/optimize/2048/src/: answer.py  answer.rs  game.rs  lib.rs  priority.rs  queue.rs  search.rs  utils.rs
codingame/optimize/2048/src/io/: read.rs  write.rs
codingame/optimize/Mars_Lander/: Cargo.toml  gif.sh
codingame/optimize/Mars_Lander/src/: main.rs  output_repr.rs  parse.rs  segment.rs  visualize.rs
codingame/optimize/Mars_Lander/src/referee/: env.rs  intersect.rs  lander.rs  mod.rs  process_step.rs  solution_into_real_output.rs
codingame/optimize/Mars_Lander/src/solve/: breed_generation.rs  first_generation.rs  get_score.rs  mod.rs  simulate_generation.rs
codingame/optimize/Mars_Lander/src/visualize/: generation_number.rs  landscape.rs  mod.rs  solution.rs
codingame/optimize/Mars_Lander/validator/: 1_1.txt  3_1.txt  3_2.txt
codingame/optimize/Travelling_Salesman.concorde/: orchestrator.sh  solver.rs
codingame/optimize/Travelling_Salesman.concorde/validator/: 02_10.txt  04_100.txt  05_300.txt  06_100.txt  07_150.txt  09_250.txt  13_300.txt  15_300.txt
codingame/optimize/a-star-craft/: .gitignore  Cargo.toml  compare.py  copy.py  scheduler.py  visualize.py
codingame/optimize/a-star-craft/src/: main.rs
codingame/optimize/a-star-craft/src/parse/: env.rs  mod.rs
codingame/optimize/a-star-craft/src/simulation/: engine.rs  gpu.rs  kernel.cu  mod.rs  (+1 more)
codingame/optimize/a-star-craft/validator/: 01_simple.txt  02_dual_simple.txt  03_buggy_robot.txt  04_dual_buggy_robots.txt  05_3x3_platform.txt  06_roundabout.txt  07_don't_fall.txt  08_portal.txt  09_codingame.txt  10_multiple_3x3_platforms.txt  11_9x9_quantic_platform.txt  12_one_long_road.txt  13_hard_choice.txt  14_the_best_way.txt  15_hypersonic.txt  16_hypersonic_deluxe.txt  17_saturn_rings.txt  18_gl_hf.txt  19_cross.txt  20_to_the_right.txt  21_wings_of_liberty.txt  22_round_the_clock.txt  23_cells.txt  24_shield.txt  25_starcraft.txt  26_xel.txt  27_4_gates.txt  28_confusion.txt  29_bunker.txt  30_split.txt
codingame/optimize/code-vs-zombies/: .gitignore  Cargo.toml  copy.py  flake.nix
codingame/optimize/code-vs-zombies/src/: lib.rs  main.rs  referee.cu  referee.rs
codingame/optimize/code-vs-zombies/tests/: analyze.rs  batch.rs  combo_hist.rs  controller_probe.rs  cpu_sim.rs  expected_log.rs  play_check.rs  policy_probe.rs  verify.rs
codingame/optimize/code-vs-zombies/validator/: 01_simple.txt  02_2_zombies.txt  03_2_zombies_redux.txt  04_scared_human.txt  05_3_vs_3.txt  06_combo_opportunity.txt  07_rows_to_defend.txt  08_rows_to_defend_redux.txt  09_rectangle.txt  10_cross.txt  11_unavoidable_deaths.txt  12_columns_of_death.txt  13_rescue_mission.txt  14_triangle.txt  15_grave_danger.txt  16_grid.txt  17_horde.txt  18_flanked.txt  19_split_second_reflex.txt  20_swervy_pattern.txt  21_devastation.txt
codingame/optimize/mars-lander/: initial.py
codingame/optimize/search-race/: Cargo.toml  compare.py  copy.py  copy.sh  flake.nix  resource.md  scheduler.py
codingame/optimize/search-race/src/: dist.rs  main.rs  main_radiate.rs  output_repr.rs  output_solution.rs  parse.rs  segment.rs
codingame/optimize/search-race/validator/: 10.txt  11.txt  13.txt  15.txt  17.txt  18.txt  19.txt  2.txt  20-v1.txt  20.txt  21.txt  23.txt  24.txt  25.txt  27-v12.txt  28.txt  29-v14.txt  30.txt  31-v16.txt  31.txt  34.txt  35.txt  36.txt  37-v22.txt  37.txt  41-v26.txt  42-v27.txt  44-v29.txt  45.txt  46.txt  47-v32.txt  48-v33.txt  48.txt  49.txt  50.txt  53-v38.txt  54-v39.txt  55-v40.txt  56-v41.txt  57-v42.txt  (+10 more)
codingame/optimize/travelling-salesman/: initial.cpp
codingame/optimize/travelling-salesman/concorde/: Cargo.toml  submission.rs
codingame/solved/: 11-puzzle.rs  1D_Spreadsheet.c  ASCII_Art.py  Annihilation.rs  CG:Don't Panic - Episode 1.py  CG:Power_of_Thor.c  CG:Temperature.c  CG:Temperature.py  Code_vs_Zombies.cpp  Container_Terminal.c  Count_your_coins.rs  Create_the_longest_sequence_of_1s.c  Custom_Game_of_Life.c  Don't Panic - Episode 1.py  Encryption_Decryption_of_Enigma_Machine.rs  Equivalent_Resistance,_Circuit_Building.c  Factorial_vs_Exponential.rs  Horse-Racing_Duals.c  Island_Escape.rs  Length_of_Syracuse_Conjecture_Sequence.c  Logic_gates.py  MIME_type.cpp  Maximum_sub-sequence.c  Messed_up_mosaics.rs  Moves_in_maze.py  Next_Growing_number_[unoptimised].c  Number_of_Digits.rs  Pirate's_treasure.py  Power_of_Thor.c  Prefix_code.c  Recurring_Decimals.rs  Reverse_FizzBuzz.rs  Reverse_Minesweeper.c  Reverse_Minesweeper.cpp  Rock_Paper_Scissors_Lizard_Spock.c  Scrabble.c  Shoot_Enemy_Aircraft.rs  Snail_Run.py  Stock_Exchange_Losses.c  Temperature.c  (+10 more)
codingame/unfinished/: 11-puzzle.rs  Indentation_CGX.c  MIME_type.c  Vox_Codei_-_Episode_1.cpp
(+353 files in other folders)
