[package]
name = "codingame"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Messed_up_mosaics"
path = "solved/Messed_up_mosaics.rs"

[[bin]]
name = "Reverse_FizzBuzz"
path = "solved/Reverse_FizzBuzz.rs"

[[bin]]
name = "Encryption_Decryption_of_Enigma_Machine"
path = "solved/Encryption_Decryption_of_Enigma_Machine.rs"

[[bin]]
name = "Factorial_vs_Exponential"
path = "solved/Factorial_vs_Exponential.rs"

[[bin]]
name = "Shoot_Enemy_Aircraft"
path = "solved/Shoot_Enemy_Aircraft.rs"

[[bin]]
name = "Count_your_coins"
path = "solved/Count_your_coins.rs"

[[bin]]
name = "Annihilation"
path = "solved/Annihilation.rs"

[[bin]]
name = "Island_Escape"
path = "solved/Island_Escape.rs"

[[bin]]
name = "Recurring_Decimals"
path = "solved/Recurring_Decimals.rs"

[[bin]]
name = "Number_of_Digits"
path = "solved/Number_of_Digits.rs"
