[package]
name = "bot"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Delille <adelille@student.42.fr>"]

[dependencies]
rand = "0.9.2" # https://www.codingame.com/playgrounds/40701/help-center/languages-versions

[[bin]]
name = "game_of_drones"
path = "Game_of_Drones.rs"

[[bin]]
name = "fall_2022"
path = "Fall_Challenge_2022.rs"

[[bin]]
name = "spring_2023"
path = "Spring_Challenge_2023.rs"

[[bin]]
name = "summer_2024"
path = "Summer_Challenge_2024.rs"

[[bin]]
name = "summer_2025"
path = "Summer_Challenge_2025.rs"

[[bin]]
name = "hypersonic"
path = "hypersonic.rs"

[[bin]]
name = "winter_2026"
path = "winter-challenge-2026-exotec.rs"
