[package]
name = "optimize"
version = "0.1.0"
edition = "2024"
authors = ["Alexandre Delille <adelille@student.42.fr>"]

[features]
default = []
lossless = []

[[bin]]
name = "spring_2025"
path = "Spring_Challenge_2025.rs"

[[bin]]
name = "number_shifting"
path = "Number_Shifting.rs"

[[bin]]
name = "code_of_the_rings"
path = "Code_of_the_Rings.rs"
