[package]
name = "optimize"
version = "0.1.0"
edition = "2024"
authors = ["Alexandre Delille <adelille@student.42.fr>"]

[features]
default = []
lossless = []

[[bin]]
name = "spring-2025"
path = "spring-challenge-2025.rs"

[[bin]]
name = "number-shifting"
path = "number-shifting.rs"

[[bin]]
name = "code-of-the-rings"
path = "code-of-the-rings.rs"
