[package]
name = "fall_challenge_2023"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "bin/main.rs"

[[bin]]
name = "answer"
path = "bin/answer.rs"
