[package]
name = "code-vs-zombies"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []

[dependencies]
# rand = "0.10"
ron = "0.12"
serde = { version = "1", features = ["derive"] }

cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "cuda-12080", "dynamic-linking"] }
