[package]
name = "search-race"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["visualize"]
visualize = ["dep:svg"]

[dependencies]
rand = "0.10"
rayon = "1"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
svg = { version = "0.18", optional = true }
