[package]
name = "search-race"
version = "0.1.0"
edition = "2024"

# [[bin]]
# name = "radiate"
# path = "src/main_radiate.rs"
# required-features = ["radiate"]

[workspace]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["visualize"]
visualize = ["dep:svg"]
extra-log = []
# radiate = ["dep:radiate"]

[dependencies]
rand = "0.10"
rayon = "1"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
svg = { version = "0.18", optional = true }
# radiate = { version = "1.2", optional = true, features = ["gp", "serde", "rayon", "ui"] }

cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "cuda-12080", "dynamic-linking"] }
